--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pydantic>=2.0.0",            # 数据验证
     "tenacity>=8.2.0",            # 重试机制（指数退避）
     "playwright>=1.57.0",
+    "gradio>=5.0.0",              # Web UI 框架
 ]
 
 [project.optional-dependencies]
